[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lyricsgenius>=3.12.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
]
